# Dictionary

./: .gitignore  Dict.ml  Dict.mli  DictMain.ml  Dictionary.opam  README.md  build.sh  dune
